Solved - Issue #741 Upload model form on view page needs adjustment on mobile view
More Details. Added media queries to handle this in components\modalbox\modalbox.css

--- a/components/modalbox/modalbox.css
+++ b/components/modalbox/modalbox.css
@@ -22,11 +22,27 @@
   padding: 0;
   border: 1px solid #888;
   width: 80%;
+  
+  @media only screen and (max-width: 1100px) {
+        width: 50%;
+  }
+
+  @media only screen and (max-width: 600px) {
+        width: 85%;
+  }
+
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
+}
+
+.modalbox-content #modelupload, 
+.modalbox-content #weightsupload {
+  @media only screen and (max-width: 600px) {
+        width: 90%;
+  }
 }
 
 /* Add Animation */
